--- a/acid-state-tls.cabal
+++ b/acid-state-tls.cabal
@@ -1,12 +1,12 @@
 Name:                acid-state-tls
 Version:             0.9.0
-Synopsis:            Add ACID guarantees to any serializable Haskell data structure.
-Description:         Use regular Haskell data structures as your database and get stronger ACID guarantees than most RDBMS offer.
+Synopsis:            Add TLS support for Data.Acid.Remote
+Description:         Adds TLS support for connections to remote AcidState databases
 Homepage:            http://acid-state.seize.it/
 License:             PublicDomain
 Author:              David Himmelstrup, Jeremy Shaw
 Maintainer:          Lemmih <lemmih@gmail.com>
--- Copyright:
+Copyright:           2013, David Himmelstrup, Jeremy Shaw
 Category:            Database
 Build-type:          Simple
 Cabal-version:       >=1.6
@@ -15,19 +15,19 @@ Extra-source-files:
         examples/ssl/test.*
 
 Source-repository head
-  type:          darcs
-  location:      http://hub.darcs.net/Lemmih/acid-state-tls
+  type:          git
+  location:      https://github.com/acid-state/acid-state-tls
 
 Library
   Hs-Source-Dirs:      src
 
   Exposed-Modules:     Data.Acid.Remote.TLS
 
-  Build-depends:       acid-state >= 0.9 && < 0.10,
-                       base >= 4 && < 5,
-                       directory,
-                       HsOpenSSL,
-                       network,
-                       safecopy >= 0.6
+  Build-depends:       acid-state >= 0.9 && < 0.13,
+                       base       >= 4   && < 5,
+                       directory            < 1.3,
+                       HsOpenSSL            < 0.11,
+                       network              < 2.5,
+                       safecopy   >= 0.6 && < 0.9
 
   GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds
